// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changelog renderers - renderChangeTypeHeader has correct grouped output 1`] = `"### Minor changes"`;

exports[`changelog renderers - renderChangeTypeHeader has correct output 1`] = `"### Minor changes"`;

exports[`changelog renderers - renderChangeTypeSection has correct grouped output 1`] = `
"### Minor changes

- \`bar\`
  - Awesome change (user1@example.com)
- \`foo\`
  - Boring change (user2@example.com)"
`;

exports[`changelog renderers - renderChangeTypeSection has correct output 1`] = `
"### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)"
`;

exports[`changelog renderers - renderEntries has correct grouped output 1`] = `
"- \`bar\`
  - Awesome change (user1@example.com)
- \`foo\`
  - Boring change (user2@example.com)"
`;

exports[`changelog renderers - renderEntries has correct output 1`] = `
"- Awesome change (user1@example.com)
- Boring change (user2@example.com)"
`;

exports[`changelog renderers - renderEntry has correct grouped output 1`] = `"- Awesome change (user1@example.com)"`;

exports[`changelog renderers - renderEntry has correct output 1`] = `"- Awesome change (user1@example.com)"`;

exports[`changelog renderers - renderHeader has correct grouped output 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT"
`;

exports[`changelog renderers - renderHeader has correct output 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT"
`;

exports[`changelog renderers - renderPackageChangelog has correct grouped output 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- \`bar\`
  - Awesome change (user1@example.com)
- \`foo\`
  - Boring change (user2@example.com)

### Patches

- \`foo\`
  - Fix (user1@example.com)
- \`bar\`
  - stuff (user2@example.com)"
`;

exports[`changelog renderers - renderPackageChangelog has correct output 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)"
`;

exports[`changelog renderers - renderPackageChangelog uses custom renderChangeTypeHeader 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Important stuff

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Boring stuff

- Fix (user1@example.com)
- stuff (user2@example.com)"
`;

exports[`changelog renderers - renderPackageChangelog uses custom renderChangeTypeSection 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)"
`;

exports[`changelog renderers - renderPackageChangelog uses custom renderEntries 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

Awesome change!!!

Boring change!!!

### Patches

Fix!!!

stuff!!!"
`;

exports[`changelog renderers - renderPackageChangelog uses custom renderEntry 1`] = `
"## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- \`bar\`
  - Awesome change (#123)
- \`foo\`
  - Boring change (#123)

### Patches

- \`foo\`
  - Fix (#123)
- \`bar\`
  - stuff (#123)"
`;

exports[`changelog renderers - renderPackageChangelog uses custom renderHeader 1`] = `
"## 1.2.3
Thu, 22 Aug 2019 21:20:40 GMT
[Compare changes](http://real-github-compare-link)

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)"
`;
